# labs

Lab 4/: readme.txt
Lab 4/client/: CMakeLists.txt  client_node.cpp  package.xml
Lab 4/control_selector/src/: wall_follower_control.cpp  wall_follower_control.h
Lab 4/Логика/: CMakeLists.txt  control_selector_node.cpp
